# openrgb-rs

./: Cargo.toml
data/: Cargo.toml
data/src/: color.rs  color_mode.rs  controller.rs  device_type.rs  direction.rs  error.rs  led.rs  lib.rs  mode.rs  mode_flag.rs  packet.rs  primitive.rs  protocol.rs  string.rs  tuple.rs  vec.rs  zone.rs  zone_type.rs
examples/: connect.rs  controllers.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: client.rs  lib.rs  protocol.rs  server.rs
src/data/: controller.rs  mod.rs  packet.rs  packet_id.rs
src/data/packet/: header.rs  mod.rs  other_packets.rs  packets.rs
src/server/: handler.rs  mod.rs
